Now JavalinFly is working as expected